<resources>
    <string name="app_name">氡·6盘</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="action_fail">操作失败，请检查网络</string>
    <string name="loading">请稍等…</string>
    <string name="preview_loading">操作过快，请稍等几秒再进行预览</string>

    <!--main-->
    <string name="main_refresh">刷新</string>
    <string name="main_refresh_success">刷新完成</string>
    <string name="main_check_login_status_title">请稍等…</string>
    <string name="main_check_login_status_second_title">检查登录状态中……</string>
    <string name="main_check_login_status_title_error">您尚未登录</string>
    <string name="main_check_login_status_second_title_error">点击前去登录</string>
    <string name="main_check_login_status_sub_until">订阅有效期至 </string>
    <string name="main_check_login_status_sub_expires">您的订阅已过期</string>
    <string name="main_update_title">有新版本</string>
    <string name="main_update_msg"><b>检测到存在新 %s 版本 %s(%d)</b>\n\n更新日志：\n%s\n\n备注：不支持 x86 系列设备，由于安装包体积以后应该也不会支持。在网络条件允许的情况下，请尽量使用「直接下载」。</string>
    <string name="main_update_button_release">前往发布页</string>
    <string name="main_update_button_direct">直接下载</string>
    <string name="main_update_button_mirror">镜像下载</string>

    <string name="main_file_manager_title">文件管理</string>
    <string name="main_file_manager_second_title">（未知配额）</string>

    <string name="main_offline_download_title">离线下载</string>
    <string name="main_offline_download_second_title">（未知配额）</string>

    <string name="main_ticket_title">工单</string>
    <string name="main_setting_title">设置</string>
    <string name="main_about_title">关于</string>

    <!--login-->
    <string name="login_toolbar_title">登录6盘</string>

    <!--user-->
    <string name="user_toolbar_title">个人信息</string>

    <!--file-->
    <string name="file_more">更多</string>
    <string name="file_toolbar_title">文件管理</string>
    <string name="file_one_label_filename">文件</string>
    <string name="file_one_label_size">大小</string>
    <string name="file_file_not_preview">无法预览</string>
    <string name="file_file_not_preview_desc">此文件的 MIME 为 %s，暂不支持预览，请下载后查看。</string>
    <string name="file_image_not_preview">无法预览</string>
    <string name="file_video_not_vip">无法播放</string>
    <string name="file_image_not_preview_desc">此图片暂无法预览，请下载后查看</string>
    <string name="file_video_not_preview_desc">此视频暂无法预览，请下载后查看</string>
    <string name="file_video_not_vip_desc">视频预览功能仅限订阅用户使用</string>

    <string name="file_upload">上传文件</string>

    <string name="file_create_folder">创建文件夹</string>
    <string name="file_create_folder_dialog">文件夹名称</string>
    <string name="file_create_folder_success">文件夹创建成功</string>
    <string name="file_create_folder_fail">文件夹名称无效，请勿为空、全空格或包含英文冒号「:」</string>

    <string name="file_transmission">传输列表</string>

    <string name="file_to_parent_home">返回首页</string>

    <string name="file_sort_title">排序方式</string>
    <string name="file_sort_default">恢复默认排序</string>
    <string name="file_sort_filename_asc">按文件名正序</string>
    <string name="file_sort_filename_desc">按文件名倒序</string>
    <string name="file_sort_ctime_asc">按创建时间正序</string>
    <string name="file_sort_ctime_desc">按创建时间倒序</string>

    <string name="file_search_title">搜索</string>
    <string name="file_search_dialog_title">搜索文件名</string>
    <string name="file_search_dialog_all">全局搜索</string>
    <string name="file_search_dialog_this">当前目录下搜索</string>
    <string name="file_search_dialog_fail">搜索内容为空或不合法</string>

    <string name="file_more_download">下载</string>
    <string name="file_more_download_to">下载至</string>
    <string name="file_more_copy">复制</string>
    <string name="file_more_move">移动</string>
    <string name="file_more_rename">重命名</string>
    <string name="file_more_star">星标</string>
    <string name="file_more_delete">删除</string>

    <string name="file_more_rename_filename">文件名</string>
    <string name="file_more_rename_directoryname">文件夹名</string>
    <string name="file_more_rename_success_file">重命名文件成功</string>
    <string name="file_more_rename_success_directory">重命名文件夹成功</string>
    <string name="file_more_rename_fail">文件夹名称无效，请勿为空、全空格或与原名称相同</string>
    <string name="file_more_star_title">标记星标</string>
    <string name="file_more_star_clear">清除星标</string>
    <string name="file_more_star_set_success">设置星标成功</string>
    <string name="file_more_star_remove_success">移除星标成功</string>
    <string name="file_more_star_now">（当前）</string>


    <string name="file_toolbar_star">星标</string>
    <string name="file_toolbar_star_filter">星标筛选（长按编辑）</string>
    <string name="file_toolbar_star_filter_clear">清除筛选</string>
    <string name="file_toolbar_star_filter_add">新增</string>
    <string name="file_toolbar_star_filter_modify">编辑（仅支持修改名称）</string>
    <string name="file_toolbar_star_filter_modify_name">星标名称</string>
    <string name="file_toolbar_star_filter_modify_name_success">修改星标名称成功</string>
    <string name="file_toolbar_star_filter_modify_name_fail">星标名称为空或不合法</string>
    <string name="file_toolbar_star_add_title">创建星标</string>
    <string name="file_toolbar_star_add_color">选择颜色</string>
    <string name="file_toolbar_star_add_name">星标名称</string>
    <string name="file_toolbar_star_add_success">创建星标成功</string>
    <string name="file_toolbar_star_add_fail">创建星标失败，可能已存在同颜色星标</string>
    <string name="file_toolbar_star_add_fail_server">创建星标失败，颜色异常。请确认是否选择了颜色并保证不为纯黑或纯白</string>
    <string name="file_toolbar_star_delete">删除</string>
    <string name="file_toolbar_star_delete_msg">您确定要删除此星标吗？如果当前存在使用此星标的文件或文件夹，它们将会恢复为未标记状态。</string>
    <string name="file_toolbar_star_delete_success">删除星标成功</string>

    <!--transmission-->
    <string name="transmission_download_title">下载</string>
    <string name="transmission_download_finish">下载完成</string>
    <string name="transmission_download_dialog_finish_title">下载已完成</string>
    <string name="transmission_download_dialog_finish_msg">您在此前执行过对此文件的下载操作，且已下载完成。是否需要重新下载文件？</string>
    <string name="transmission_download_dialog_resume_title">下载已暂停</string>
    <string name="transmission_download_dialog_resume_msg">您在此前执行过对此文件的下载操作，但暂未下载完成。是否要继续下载文件？此操作不会刷新下载地址。</string>
    <string name="transmission_download_dialog_doing">此文件正在下载中</string>
    <string name="transmission_download_delete">删除</string>
    <string name="transmission_download_open_with">打开方式</string>
    <string name="transmission_download_need_permission">此应用需要获取 SD 卡权限。请放心，下载目录将完全符合 Android 标准。</string>
    <string name="transmission_upload_title">上传</string>

    <!--offline-->
    <string name="offline_toolbar_title">离线下载</string>
    <string name="offline_toolbar_clear_all">清除所有任务</string>
    <string name="offline_toolbar_clear_finished">清除已完成任务</string>
    <string name="offline_toolbar_clear_unfinished">清除未完成任务</string>
    <string name="offline_toolbar_clear_error">清除错误任务</string>
    <string name="offline_toolbar_clear_unknown">未知参数</string>
    <string name="offline_toolbar_delete_body">您确定要%s吗？此操作无法撤回。</string>
    <string name="offline_toolbar_delete_file_too">连带文件删除</string>
    <string name="offline_toolbar_delete_file_ok">已%s</string>
    <string name="offline_toolbar_delete_file_ok_without_file">已%s，但您仍可以在对应文件夹中找到文件</string>
    <string name="offline_item_task_status">任务状态：</string>
    <string name="offline_new_title">创建离线任务</string>
    <string name="offline_new_by_links">通过 URL 下载</string>
    <string name="offline_new_by_bt">通过 BT 种子下载</string>
    <string name="offline_new_by_browser">通过浏览器批量读取</string>
    <string name="offline_new_by_links_title">链接</string>
    <string name="offline_new_by_links_username">用户名</string>
    <string name="offline_new_by_links_password">密码</string>
    <string name="offline_new_by_links_msg">单个任务<b>最大</b> 256GB。请输入 URL 地址/磁力链接/电驴地址/迅雷链接，每行一条，回车换行。<b>需要用户名或密码的请单独一条提交，勿批量。迅雷解析后若链接指向 torrent 种子文件地址，则只会离线到种子文件本身。</b><u>百度网盘为人工代下载，仅对订阅用户开放，在密码处填写分享码，用户名留空。</u>6 盘官方可能会对下载链接进行审查，请确保下载链接合乎当地法规。</string>
    <string name="offline_new_by_links_button_parse">预解析</string>
    <string name="offline_new_by_links_button_parse_empty">输入内容为空，请填写链接</string>
    <string name="offline_new_by_links_button_parse_error">无法解析不受支持的链接：</string>
    <string name="offline_new_by_links_button_submit">提交离线</string>
    <string name="offline_new_by_links_button_submit_empty">预解析队列为空，请确认是否成功预解析</string>
    <string name="offline_new_by_links_button_submit_ok">已成功提交 %d 条离线任务</string>
    <string name="offline_new_by_links_path_title">下载位置</string>
    <string name="offline_new_by_links_path_button">选择</string>
    <string name="offline_new_by_links_path_toolbar">选择路径</string>
    <string name="offline_new_by_links_task_title">任务列表</string>
    <string name="offline_new_by_links_task_delete_title">是否移除此预解析任务？</string>

    <!--setting-->
    <string name="setting_toolbar_title">设置</string>
    <string name="setting_video_title">视频</string>
    <string name="setting_video_clear_cache">清除缓存</string>
    <string name="setting_video_clear_cache_desc">清除视频预览过程中产生的缓存</string>
    <string name="setting_misc_title">杂项</string>
    <string name="setting_misc_show_guide">重置向导</string>
    <string name="setting_misc_show_guide_desc">重新在文件列表展示各按钮的功能</string>
    <string name="setting_misc_show_guide_toast">重置操作已完成</string>

    <!--about-->
    <string name="about_page_info">介绍</string>
    <string name="about_page_info_desc">就是一个第三方的6盘客户端而已</string>
    <string name="about_page_dev">开发者</string>
    <string name="about_page_dev_1">氡·6盘 开发者</string>
    <string name="about_page_open_source">开放源代码许可</string>

    <!--player-->
    <string name="player_video_cold">您正在预览冷资源，缓冲速度可能较为不佳</string>

    <string name="player_change_play_speed">播放速度(%.2fx)</string>
    <string name="player_change_rotate">旋转画面</string>
    <string name="player_ratio_default">默认比例</string>
    <string name="player_ratio_16_9" translatable="false">16:9</string>
    <string name="player_ratio_4_3" translatable="false">4:3</string>
    <string name="player_ratio_full">全屏</string>
    <string name="player_ratio_truly_full">拉伸全屏</string>

    <!--spotlight-->
    <string name="spotlight_next">下个提示</string>
    <string name="spotlight_done">明白了</string>
    <string name="spotlight_backToParentTarget_title">返回上级</string>
    <string name="spotlight_backToParentTarget_content">点击此处可以返回到上级文件夹</string>
    <string name="spotlight_backToMainTarget_title">返回首页</string>
    <string name="spotlight_backToMainTarget_content">点击此处可以返回到应用首页</string>
    <string name="spotlight_fabTarget_title">浮动按钮</string>
    <string name="spotlight_fabTarget_content">点击此处可以唤出上传文件和创建文件夹</string>
    <string name="spotlight_transmission_title">传输列表</string>
    <string name="spotlight_transmission_content">点击此处可以进入下载列表</string>
    <string name="spotlight_sortTarget_title">文件排序</string>
    <string name="spotlight_sortTarget_content">点击此处可以根据需要变换文件排序方式</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>