<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <PreferenceCategory app:title="@string/setting_video_title"
        app:iconSpaceReserved="false">
        <Preference
            app:key="click_video_clear_cache"
            app:title="@string/setting_video_clear_cache"
            app:summary="@string/setting_video_clear_cache_desc"
            app:iconSpaceReserved="false">
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/setting_misc_title"
        app:iconSpaceReserved="false">
        <Preference
            app:key="click_misc_show_guide"
            app:title="@string/setting_misc_show_guide"
            app:summary="@string/setting_misc_show_guide_desc"
            app:iconSpaceReserved="false">
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>