<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_file_transmission"
        android:contentDescription="@string/file_transmission"
        android:title="@string/file_transmission"
        android:icon="@drawable/ic_baseline_import_export_24"
        app:showAsAction="always"/>
    <item android:id="@+id/menu_file_sort"
        android:contentDescription="@string/file_sort_title"
        android:title="@string/file_sort_title"
        android:icon="@drawable/ic_baseline_sort_24"
        app:showAsAction="always"/>
    <item android:id="@+id/menu_file_search"
        android:contentDescription="@string/file_search_title"
        android:title="@string/file_search_title"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="always"/>
</menu>